@@ -18,6 +18,8 @@
  * along with YadQt.  If not, see <http://www.gnu.org/licenses/>.
 */
 
+//#include "systemheaders.h"
+
 #include "globals.h"
 
 int main(int argc, char **argv)
